--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -99,7 +99,10 @@ GTP_MODE=DISABLED
 # DISABLED
 # BASIC
 # PREMIUM
-SAP=PREMIUM
+
+# MODEM_DEFAULT
+SAP=MODEM_DEFAULT
+
 
 #FREE_WIFI_SCAN_INJECT valid modes:
 #DISABLED
@@ -128,6 +131,12 @@ WIFI_SUPPLICANT_INFO=BASIC
 # ENABLED
 # DISABLED
 
+#Values for LOW_RAM_TARGETS:
+# ENABLED
+# DISABLED
+# Property to enable/disable processes for low ram targets. Uses ro.config.low_ram property
+# to identify low ram targets.
+
 #PROCESS_NAME
 # Name of the executable file.
 
@@ -145,6 +154,14 @@ WIFI_SUPPLICANT_INFO=BASIC
 #2. 'all' or 'all exclude' -> for All platforms
 #3. 'all exclude XXXX' -> All platforms exclude XXXX. For example: all exclude msm8937
 
+#Values for SOC_IDS can be:
+#1. Any valid values obtained from soc_id node separated by single space. For example: 339 386 436
+##  soc_id value can be obtained from any one of below node:
+##      - /sys/devices/soc0/soc_id
+##      - /sys/devices/system/soc/soc0/id
+#2. 'all' or 'all exclude' -> for All soc id's
+#3. 'all exclude XXXX' -> All soc id's exclude XXXX. For example: all exclude 339 386
+
 #Values for BASEBAND can be:
 #1. Any valid values obtained from ro.baseband separated by single space. For example: sglte sglte2
 #2. 'all' or 'all exclude' -> for all basebands
@@ -156,7 +173,9 @@ PROCESS_GROUPS=gps wifi inet oem_2901
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0xf303
 PLATFORMS=all
+SOC_IDS=all
 BASEBAND=all
+LOW_RAM_TARGETS=DISABLED
 HARDWARE_TYPE=all
 VENDOR_ENHANCED_PROCESS=0
 
@@ -167,7 +186,9 @@ PROCESS_GROUPS=inet gps
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xc03
 PLATFORMS=all
+SOC_IDS=all exclude 386 436
 BASEBAND=all
+LOW_RAM_TARGETS=DISABLED
 HARDWARE_TYPE=all
 VENDOR_ENHANCED_PROCESS=1
 
@@ -178,18 +199,22 @@ PROCESS_GROUPS=wifi inet gps system oem_2904
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xc03
 PLATFORMS=all
+SOC_IDS=all exclude 386 436
 BASEBAND=all
+LOW_RAM_TARGETS=DISABLED
 HARDWARE_TYPE=all
 VENDOR_ENHANCED_PROCESS=1
 
 PROCESS_NAME=slim_daemon
 PROCESS_ARGUMENT=
-PROCESS_STATE=DISABLED
+PROCESS_STATE=ENABLED
 PROCESS_GROUPS=gps oem_2901 can plugdev diag sensors
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0
 PLATFORMS=all
+SOC_IDS=all exclude 386 436
 BASEBAND=all
+LOW_RAM_TARGETS=DISABLED
 HARDWARE_TYPE=all
 VENDOR_ENHANCED_PROCESS=1
 
@@ -200,7 +225,9 @@ PROCESS_GROUPS=inet gps system
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
+SOC_IDS=all
 BASEBAND=all
+LOW_RAM_TARGETS=ENABLED
 HARDWARE_TYPE=all
 VENDOR_ENHANCED_PROCESS=0
 
@@ -216,7 +243,9 @@ PROCESS_GROUPS=gps diag inet qwes oem_2901 system
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
+SOC_IDS=all
 BASEBAND=all
+LOW_RAM_TARGETS=DISABLED
 HARDWARE_TYPE=all
 VENDOR_ENHANCED_PROCESS=1
 
@@ -235,6 +264,8 @@ PROCESS_GROUPS=gps diag inet oem_2901
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
+SOC_IDS=all
 BASEBAND=all
+LOW_RAM_TARGETS=DISABLED
 HARDWARE_TYPE=all
 VENDOR_ENHANCED_PROCESS=1
