--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -53,7 +53,7 @@ OSNLP_PACKAGE = com.google.android.gms
 # REGION_OSNLP_PACKAGE:
 # This value will be used as alternative
 # for particular region where default NLP is not functional.
-#REGION_OSNLP_PACKAGE = com.baidu.map.location
+#REGION_OSNLP_PACKAGE =
 
 ###################################
 # GEOFENCE SERVICES
@@ -95,13 +95,20 @@ GTP_PRIVACY_RETRY_INTERVAL = 86400
 # SDK (WWAN not available for Modems before LocTech 10.0)
 GTP_MODE=DISABLED
 
+#GTP_WAA valid modes:
+# DISABLED
+# BASIC
+GTP_WAA=DISABLED
+
 #SAP valid modes:
 # DISABLED
 # BASIC
 # PREMIUM
+#MODEM_DEFAULT
+SAP=MODEM_DEFAULT
 
 # MODEM_DEFAULT
-SAP=MODEM_DEFAULT
+SAP=PREMIUM
 
 
 #FREE_WIFI_SCAN_INJECT valid modes:
@@ -143,6 +150,7 @@ WIFI_SUPPLICANT_INFO=BASIC
 #FEATURE MASKS:
 # GTP-WIFI    0X03
 # GTP-MP-CELL 0xc00
+# GTP-WAA     0x100
 # SAP         0Xc0
 # ODCPI      0x1000
 # FREE_WIFI_SCAN_INJECT   0x2000
@@ -197,7 +205,7 @@ PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
 PROCESS_GROUPS=wifi inet gps system oem_2904
 PREMIUM_FEATURE=1
-IZAT_FEATURE_MASK=0xc03
+IZAT_FEATURE_MASK=0xd03
 PLATFORMS=all
 SOC_IDS=all exclude 386 436
 BASEBAND=all
